--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <hr>
         <div style="margin-top: -250px; margin-bottom: 250px;" id="section2"></div>
         <div style="padding-bottom: 50px; padding-top: 15px;">
-            <form action="https://formsubmit.co/affiliatedonations@mail.de" method="POST">
+            <form action="https://formsubmit.co/felixwolny1@gmail.de" method="POST">
                 <p style="margin-top: 70px; margin-bottom: 35px">Du findest dein Produkt nicht? Sende uns den Amazon-Link und wir fügen es hinzu!</p>
                 <input type="text" name="the link" required placeholder="Der Link" style="border: 1px solid rgba(0, 0, 0, 0.05)">
                 <input type="email" name="email" placeholder="E-mail, zum benachrichtigen, wenn der Link vorhanden ist" style="border: 1px solid rgba(0, 0, 0, 0.05)">
